Updated Dev Docs

--- a/views/pages/developer.ejs
+++ b/views/pages/developer.ejs
@@ -8,17 +8,67 @@
 
     <main>
       <div class="row">
-        <div class="col-sm-8">
-          <div class="jumbotron">
+        <div class="col-sm-12">
+          <div
+            class="jumbotron"
+            style="padding-top: 20px; padding-bottom: 10px"
+          >
             <h1>API Documentation</h1>
-            <p>Welcome to templating using EJS</p>
+            <p>
+              Welcome to templating using EJS. This is a very simple
+              Documentation.
+            </p>
           </div>
         </div>
-
-        <div class="col-sm-4">
-          <div class="well">
-            <h3>Look I'm A Sidebar!</h3>
+      </div>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="jumbotron" style="padding-top: 5px; padding-bottom: 5px">
+            <h4>GET API</h4>
+            <br />
+            <h5>/api/v1/dish/:id</h5>
+            <br />
+            <h5>/api/v1/dish/all</h5>
           </div>
+        </div>
+        <div class="col-sm-4">
+          <h3>No CURL Info</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="jumbotron" style="padding-top: 5px; padding-bottom: 5px">
+            <h4>POST API</h4>
+            <br />
+            <h5>/api/v1/dish/</h5>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <h3>No CURL Info</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="jumbotron" style="padding-top: 5px; padding-bottom: 5px">
+            <h4>PUT API</h4>
+            <br />
+            <h5>/api/v1/dish/</h5>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <h3>No CURL Info</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-8">
+          <div class="jumbotron" style="padding-top: 5px; padding-bottom: 5px">
+            <h4>DELETE API</h4>
+            <br />
+            <h5>/api/v1/dish/:id</h5>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <h3>No CURL Info</h3>
         </div>
       </div>
     </main>
