--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,8 +8,11 @@
 
     <main>
       <div class="jumbotron">
-        <h1>Foodle API</h1>
-        <p>Welcome to the API Home. GO to /developer to access the API.</p>
+        <h1>Foodle Server</h1>
+        <p>
+          Welcome to the Foodle App Home. Please go to /developer or developer
+          menu to access the API documentation.
+        </p>
       </div>
     </main>
 
