--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">EJS Is Fun</a>
+  <a class="navbar-brand" href="/">Foodle API</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
       <a class="nav-link" href="/">Home</a>
