Updated EJS Info

--- a/views/pages/developer.ejs
+++ b/views/pages/developer.ejs
@@ -22,55 +22,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-4">
           <div class="jumbotron" style="padding-top: 5px; padding-bottom: 5px">
-            <h4>GET API</h4>
+            <h6> GET: /api/v1/dish/:id</h6>
             <br />
-            <h5>/api/v1/dish/:id</h5>
+            <h6> GET: /api/v1/dish/all</h6>
             <br />
-            <h5>/api/v1/dish/all</h5>
+            <h6> POST: /api/v1/dish/</h6>
+            <br />
+            <h6> PUT: /api/v1/dish/</h6>
+            <br />
+            <h6> DELETE: /api/v1/dish/:id</h6>
           </div>
         </div>
-        <div class="col-sm-4">
-          <h3>No CURL Info</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-8">
-          <div class="jumbotron" style="padding-top: 5px; padding-bottom: 5px">
-            <h4>POST API</h4>
-            <br />
-            <h5>/api/v1/dish/</h5>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <h3>No CURL Info</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-8">
-          <div class="jumbotron" style="padding-top: 5px; padding-bottom: 5px">
-            <h4>PUT API</h4>
-            <br />
-            <h5>/api/v1/dish/</h5>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <h3>No CURL Info</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-8">
-          <div class="jumbotron" style="padding-top: 5px; padding-bottom: 5px">
-            <h4>DELETE API</h4>
-            <br />
-            <h5>/api/v1/dish/:id</h5>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <h3>No CURL Info</h3>
-        </div>
-      </div>
     </main>
 
     <footer><%- include('../partials/footer'); %></footer>
