--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -37,7 +41,8 @@ code {
 }
 
 .nav-wrapper {
-  background-color: #0747a6 !important;
+  /* background-color: #00b4d8 !important; */
+  background-color: #0096c7 !important;
 }
 
 .homeContainer {
