Removed MaterializeCSS. Updated Nav-bar'

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -29,7 +29,13 @@ code {
 }
 
 .foodle {
-  font-family: 'Josefin Slab', serif;
+  display: inline;
+  font-family: 'Bebas Neue';
+  color: #0096c7;
+}
+
+.nav-text {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .brand-logo {
