--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -265,3 +265,19 @@ blockquote {
     border-right: 1px solid rgba(0, 0, 0, 0.12);
   }
 }
+
+.container {
+  margin: 0 auto;
+  max-width: 1280px;
+  width: 90%;
+}
+@media only screen and (max-width: 992px) {
+  .container {
+    width: 85%;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .container {
+    width: 70%;
+  }
+}
