Updated UI in Root Component

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -281,3 +281,8 @@ blockquote {
     width: 70%;
   }
 }
+
+.home-content {
+  font-family: 'Cormorant Garamond', serif;
+  /* font-family: 'Nunito', sans-serif; */
+}
