Refactoring! Optimized for Mobile UI

--- a/client/src/assets/css/footer.css
+++ b/client/src/assets/css/footer.css
@@ -1,4 +1,13 @@
 .footer {
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
+  background-color: rgb(220, 228, 245);
+  color: rgb(0, 0, 0);
+}
+
+.footer-dark {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  background-color: #06080e;
+  color: white;
 }
