--- a/client/src/assets/css/nav.css
+++ b/client/src/assets/css/nav.css
@@ -1,6 +1,5 @@
 .nav-theme {
-  background-color: #334368 !important;
-  /* background-color: #31708e !important; */
+  background-color: #3f5ea7 !important;
 }
 
 .nav-theme-dark {
