Added Dark/light mode svg-toggle. Fixed Navbar bugs

--- a/client/src/assets/css/nav.css
+++ b/client/src/assets/css/nav.css
@@ -7,8 +7,8 @@
 }
 
 .nav-theme {
-  background-color: #0f1318 !important;
-  /* background-color: #3f5ea7 !important; */
+  /* background-color: #0f1318 !important; */
+  background-color: #3f5ea7 !important;
 }
 
 .nav-theme.dark {
