--- a/client/src/assets/css/toggle.css
+++ b/client/src/assets/css/toggle.css
@@ -1,10 +1,56 @@
-.toggle__dot {
-  top: -0.25rem;
-  left: -0.25rem;
-  transition: all 0.3s ease-in-out;
+/*Simple css to style it like a toggle switch*/
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
 }
 
-input:checked ~ .toggle__dot {
-  transform: translateX(100%);
-  background-color: #48bb78;
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display: none;
+}
+
+.slider {
+  background-color: rgb(243, 241, 241);
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: '';
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: 0.4s;
+  width: 26px;
+  background: url('../images/sun.svg');
+}
+
+input:checked + .slider {
+  background-color: rgb(91, 95, 99);
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+  background: rgb(91, 95, 99) url('../images/moon.svg');
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
