--- a/client/src/assets/css/nav.css
+++ b/client/src/assets/css/nav.css
@@ -1,18 +1,5 @@
-:root {
-  --background-color: #3f5ea7;
-}
-
-[data-theme='dark'] {
-  --background-color: #0f1318;
-}
-
 .nav-theme {
-  /* background-color: #0f1318 !important; */
-  background-color: #3f5ea7 !important;
-}
-
-.nav-theme.dark {
-  background-color: #0f1318 !important;
+  background-color: var(--nav-color);
 }
 
 .nav-text {
