--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -1,6 +1,12 @@
 :root {
-  --nav-color: #3f5ea7;
-  --primary-color: #203647;
+  --nav-color: #deebff;
+  --home-container-card: #fafafa;
+  --footer-color: #0f1318;
+  --footer-bg: rgb(220, 228, 245);
+  --stripped-odd: rgba(242, 242, 242, 0.842);
+  --stripped-even: rgba(206, 203, 203, 0.842);
+  --highlight-color: rgba(206, 203, 203, 0.842);
+  /* --primary-color: #203647;
   --secondary-color: #536390;
   --font-color: #515151;
   --bg-color: #fff;
@@ -12,12 +18,19 @@
   --code-bg: #f9f9f9;
   --tag-base-color: #eee;
   --tag-content-color: rgb(82, 79, 100);
-  --strong-color: #030b13;
+  --strong-color: #030b13; */
 }
 
 [data-theme='dark'] {
   --nav-color: #0f1318;
-  --primary-color: #486581;
+  --home-container-card: #0b1c2c;
+
+  --footer-color: rgb(99, 131, 233);
+  --footer-bg: #06080e;
+  --stripped-odd: #102a43;
+  --stripped-even: #243b53;
+  --highlight-color: #102a43;
+  /* --primary-color: #486581;
   --secondary-color: #818cab;
   --font-color: #c5d9e9;
   --bg-color: #030b13;
@@ -29,5 +42,5 @@
   --code-bg: #21252b;
   --tag-base-color: #102a43;
   --tag-content-color: #fff;
-  --strong-color: #587ec4;
+  --strong-color: #587ec4; */
 }
